--- a/style.css
+++ b/style.css
@@ -36,9 +36,9 @@ h2{
   z-index: 9;
   top: 0;
   left: 0;
-  width: 100vh;
+  width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.7);
+  background: rgba(0, 0, 0, 0.7);
   transform: translateX(-100vw);
 }
 
@@ -422,14 +422,19 @@ section#contact {
   }
 
   #skill-box{
-      flex: 1 1 100%;
-      max-width: 90%;
-      margin-bottom: 20px;
-      text-align: left;
-  }
+    flex: 1 1 100%;
+    max-width: 90%;
+    max-height: 12.5vh;
+    margin-bottom: 1vh;
+    text-align: left;
+}
+
+#skill-box img{
+  height: 3vh;
+}
 
   #skill-box i{
-      font-size: 30px;
+      font-size: 2vh;
   }
 
   #btn-container{
@@ -440,4 +445,9 @@ section#contact {
   #contato-social {
     flex-direction: column;
   }
+
+  .menu-bars {
+  }
+
+
 }
